# test-ai-smoke-detection

./: README.md  main.py  pyproject.toml
.claude/: settings.local.json
results/: predictions.json
results/metrics/: evaluation_summary.json  threshold_sweep_fire.json  threshold_sweep_smoke.json
src/: config.py  download_dataset.py  evaluate.py  run_inference.py  visualize.py
